[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "expense-tracker"
version = "0.1.0"
description = "Personal Expense Tracker CLI"
requires-python = ">=3.8"
dependencies = []

[project.scripts]
expense-tracker = "expense_tracker.cli:run"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-cov>=5.0"]
